Current location implemented

--- a/Runner.io/Other/Runner-io-Info.plist
+++ b/Runner.io/Other/Runner-io-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to track your route even when the app is in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to track your route while using the app.</string>
 	<key>GIDClientID</key>
 	<string>1093077852075-db6brf32dhidi4mv0tnf6e7lpb1o09ca.apps.googleusercontent.com</string>
 	<key>CFBundleURLTypes</key>
